syntax = "proto3";

message HelloRequest {
    string yourName = 1;
}

message HelloResponse {
    string message = 1;
}

message Empty {}

service HelloService {
    rpc sayHello(HelloRequest) returns (HelloResponse) {}
}
